--- a/src/SuggestedFollowsCard/App.css
+++ b/src/SuggestedFollowsCard/App.css
@@ -1,15 +1,16 @@
 /*Formato para las tarjetas de personas a seguir sugeridas*/
 .iab-followCard {
     display: flex;
-    background: #EEEBDD;
     align-items: center;
     color: #fff;
     font-size: .8rem;
     justify-content: space-between;
     place-content: end;
     position: relative;
-    top: 50px;
-    right: 5px;
+    left: 1050px;
+    bottom: 330px;
+    min-height: 75px;
+    max-width: 230px;
   }
 
 .iab-followCard-header{
@@ -23,6 +24,7 @@
     display: flex;
     flex-direction: column;
     color: #000;
+    padding: 5px;
 }
 
 .iab-followCard-infoUserName{
@@ -33,7 +35,10 @@
 .iab-profile-picture{
     width: 48px;
     height: 48px;
-    border-radius: 1000px
+    border-radius: 1000px;
+    position: relative;
+    left: 5px;
+    padding: 10px;
 }
 
 .iab-followCard-button{
@@ -47,6 +52,8 @@
     color: #fff;
     border: 1px solid #000;
     transition: .3s ease background-color;
+    position: relative;
+    top: 30px;
 }
 
 .iab-followCard-button:hover{
@@ -82,4 +89,16 @@
 
 .iab-followCard-unfollow{
     display: none;
+}
+
+.iab-followCard-suggestion{
+    color: #000;
+    font-size: medium;
+}
+
+.iab-text{
+    font-size: 14px;
+    position: relative;
+    bottom: 290px;
+    left: 1000px;
 }
