--- a/src/TopNavBar/TopNavBar.css
+++ b/src/TopNavBar/TopNavBar.css
@@ -1,5 +1,5 @@
 .topNavBar{
-    width: 100%;
+    width: 1295px;
     display: flex;
     align-items: center;
     justify-content: space-between;
