--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
+    width: 295px;
     background: #EEEBDD;
     font-family: system-ui;
-    display: grid;
   }
 
 .SuggestedFollows{
@@ -10,5 +10,4 @@ body {
     flex-direction: column;
     gap: 8px;
 }
-
 
